kdecore/tests/kmimetypetest.h
@@ -60,8 +60,8 @@ private Q_SLOTS:
     void testParseMagicFile();
     void testHelperProtocols();
     void testFromThread();
-
     void testThreads();
+    void testProperties();
 private:
     QList<KMimeMagicRule> m_rules;
     QString m_nonKdeApp;
